client/httpbin-client/service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: httpbin-serviceentry
spec:
  hosts:
  - httpbin-mutual-tls.jeremysolarz.app
  location: MESH_EXTERNAL
  ports:
  - number: 80
    name: http
    protocol: HTTP
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  endpoints:
  - address: httpbin-mutual-tls.jeremysolarz.app
    ports:
      https: 443
